--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,4 +2,10 @@
 
 :host {
   padding: $space-medium $space-large;
+  display: flex;
+  flex-direction: row;
+
+  a {
+    margin-right: $space-large;
+  }
 }
